# ai-test-gemini-CLI

./: CMakeLists.txt  main.c  temperature_sensor.c  temperature_sensor.h
.github/workflows/: ai-test-generation.yml
coverage-report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage-report/workspaces/ai-test-gemini-CLI/: index-sort-f.html  index-sort-l.html  index.html  temperature_sensor.c.func-c.html  temperature_sensor.c.func.html  temperature_sensor.c.gcov.html
scripts/: ai_test_generator.py
